# FullStackApplication

./: flags.yaml
.github/workflows/: build.yml
.harness/: file.yaml
Frontend/: sample.txt
FullStackApplication /: flags.yaml
backend/user_api/: .env  .flake8  .pre-commit-config.yaml  db.sqlite3  pyproject.toml  requirements.txt
backend/user_api/.github/workflows/: build.yml
backend/user_api/user_api/: settings.py
backend/user_api/usersApp/: decorators.py  tests.py  urls.py  views.py
